--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,48 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.container{
+  display: flex;
+  margin-top: 20%;
+  margin-left: 20%;
+}
+
+.textarea{
+  max-width: 100%;
+  text-align: center;
+  box-shadow: 0px 3px 7px 1px rgb(174, 174, 250);
+  background-color: white;
+  border: 0;
+  padding: 5px 130px ;
+  z-index: 1;
+  display: block;
+}
+
+/* .emoji11 ,.emoji22,.emoji33{
+  width: 30px;
+  z-index: 0;
+  margin-top: -50px;
+  display:none;
+} */
+
+.emoji1 ,.emoji2,.emoji3{
+  width: 30px;
+  z-index: 0;
+}
+
+.emojis{
+  margin-left: 20px;
+}
+
+
+
+.e1,.e2,.e3{
+  background-color: white;
+  border: 0;
+}
+
+
+.hello{
+  display: flex;
+}
